# orgs-ai-harness

./: .agent-harness.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  harness  pyproject.toml
.agent-harness/cache/: metadata.json  pack-ref
.agent-harness/cache/org/: org-level-skill-generation-prompt.md
.claude/skills/approval-eval-cache-lifecycle/: SKILL.md
.claude/skills/harness-config-registry/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  runbook.md  user-guide.md
local-docs/: org-skill-harness-advanced-paths.md  python-best-practices-repo-evaluation.md
org-agent-skills/: harness.yml
org-agent-skills/repos/agent-vitals/: approval.yml  eval-report.yml  llm-skill-generation-prompt.md  onboarding-summary.md  pack-report.md  resolvers.yml  unknowns.yml
org-agent-skills/repos/agents-toolbelt/: approval.yml  eval-report.yml  llm-skill-generation-prompt.md  onboarding-summary.md  pack-report.md  resolvers.yml  unknowns.yml
org-agent-skills/repos/horizon-starknet/: approval.yml  eval-report.yml  llm-skill-generation-prompt.md  onboarding-summary.md  pack-report.md  resolvers.yml  unknowns.yml
org-agent-skills/trace-summaries/: approval-events.jsonl  eval-events.jsonl  test-command-resolution.md
src/orgs_ai_harness/: __init__.py  __main__.py  approval.py  artifact_schemas.py  cache_manager.py  cli.py  config.py  dependency_artifacts.py  dependency_campaign.py  dependency_context.py  dependency_risk.py  eval_replay.py  explain.py  llm_runner.py  org_pack.py  pr_artifacts.py  pr_review.py  pr_risk.py  proposals.py  release_artifacts.py  release_context.py  release_readiness.py  release_risk.py  repo_discovery.py  repo_onboarding.py  repo_registry.py  review_context.py  runtime_adapter.py  runtime_context.py  runtime_events.py  runtime_hooks.py  runtime_permissions.py  runtime_recovery.py  runtime_runner.py  runtime_tools.py  validation.py
tests/: helpers.py  test_dependency_artifacts.py  test_dependency_campaign.py  test_dependency_context.py  test_dependency_risk.py  test_llm_runner.py  test_org_pack.py  test_org_pack_foundation.py  test_pr_artifacts.py  test_pr_review.py  test_pr_risk.py  test_property_behaviors.py  test_release_artifacts.py  test_release_context.py  test_release_readiness.py  test_release_risk.py  test_repo_onboarding.py  test_repo_registry.py  test_review_context.py  test_runtime.py
(+75 files in other folders)
